# ese5190_lab2B_full

./: README.md
01_registers/: CMakeLists.txt  README.md  flashlight.c  neopixel.c
02_repl/: CMakeLists.txt  README.md  register.h  repl.c
03_sequencer/: CMakeLists.txt  README.md  sequencer.c  sequencer.py
04_slow_motion/: README.md
05_i2c_traffic/: README.md
06_pioscope/: README.md
07_pio_sequencer/: README.md
08_adps_protocol/: README.md
09_lab_on_a_chip/: README.md
10_protoboard/: README.md
